package PS;
import "proto/range.proto";
import "proto/auc.proto";

message RiskMinProgress {
  optional double objv = 1;
  optional double relative_objv = 2;
  optional uint64 nnz_w = 5;
  optional double violation = 6;
  optional uint64 nnz_active_set = 7;
  optional double training_auc = 8;
  optional AUCData training_auc_data = 9;

  // performance
  optional double total_time = 10;
  repeated double busy_time = 11;
}

message RiskMinCall {
  enum Command {
    PREPARE_DATA = 1;
    UPDATE_MODEL = 2;
    EVALUATE_PROGRESS = 3;
    SAVE_MODEL = 4;
    RECOVER = 5;
  }
  required Command cmd = 1;
  optional PbRange key = 2;
  optional int32 feature_group_id = 3;

  optional double kkt_filter_threshold = 4;
  optional bool kkt_filter_reset = 5;
}
